# dnazen

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  demo.py  environment.yml  finetune.py  makefile  pretrain.sh.bak  pyproject.toml  requirements.txt  ruff.toml  setup.py
document/: README.md  datasets.md  development.md  makefile.md  pipeline.md  terminologies.md
document/development/: 2025-2-5-ngram-finder.md  2025-2-5-ngram-matching.md  2025-2-6-ngram-finder.md  2025-2-7-ngram-matching.md  2025-3-13-finetune-makefile-revisited.md
document/diagrams/: pretrain-phase-1.txt
results/: 2025-1-23.md  2025-2-6.md  README.md  dnazen-results.csv
results/2025-2-17/: meta-datas-freq-10.xlsx  meta-datas-freq-11.xlsx  meta-datas-freq-12.xlsx  meta-datas-freq-13.xlsx  meta-datas-freq-14.xlsx  meta-datas-freq-5.xlsx  meta-datas-freq-6.xlsx  meta-datas-freq-7.xlsx  meta-datas-freq-8.xlsx  meta-datas-freq-9.xlsx
results/2025-2-19/: meta-datas-hg38-freq.xlsx
scripts/: .gitignore  README.md  analyze_matching_results.py  analyze_ngrams.py  autoBuild.sh  env.sh  env.sh.example  find_ngram_diff.py  finetune.sh  finetune2.sh  finetune3.sh  finetune_original.sh  finetune_zen.sh  make_core_ngrams.py  make_merged_ngram_encoder.py  make_pretrain_dataset.py  make_tokenized_data.py  make_tokenized_dataset.py  make_tokenized_dataset_bak.py  makefile  makefile_finetune.mak  makefile_ngram.mak  makefile_ngram_merged.mak  n_gram.py  plot_zipfs_law.py  prepare_data_and_config copy 2.sh  prepare_data_and_config copy.sh  prepare_data_and_config.sh  prepare_ngram.sh  prepare_pretrain_data.sh  pretrain.sh  pretrain_bak.sh  run.sh  run_finetune.py  run_finetune_all.sh  run_pretrain.py  run_pretrain_bak.py  runzen.sh  train_ngram_encoder.py
scripts/utils/: datas.py  mlm.py  util.py
src/: _ngram.pyi
src/ZEN/: __init__.py  modeling.py  ngram_utils.py  tokenization.py  utils.py
src/_ngram/: FreqNgramFinder.hpp  NgramFinder.hpp  PmiNgramFinder.hpp  SafeQueue.hpp  ThreadPool.hpp  common.hpp  pybind.cpp  utils.hpp
src/dataset/: __init__.py  make_gue_pretrain_rowdata.py  make_pretrain_dataset.py  make_tokenized_dataset.py  ngram_encoder_analyze.py
src/tools/: find_ngram_diff.py  get_seq_form_dir.py  make_core_ngrams.py  make_pretrain_dataset_bak.py  ngrm_plot.py  (+4 more)
tests/: concurrent_hashmap_test.cpp  freq_ngram_test.cpp  makefile  pmi_ngram2_test.cpp  pmi_ngram_test.cpp
zen_modeling/: tokenization.py  zen_config.py  zen_padding.py
(+62 files in other folders)
