[project]
authors = [{name = "harnvo", email = "120090070@link.cuhk.edu.cn"}]
dependencies = [ 
    "transformers[torch]>=4.48.0,<5", 
    "torch>=2.4", 
    "deepspeed==0.16",
    "einops==0.8",
    "accelerate>=0.26.0", 
    "scikit-learn>=1.6.1,<2", 
    "datasets>=3.2.0,<4", 
    "peft>=0.14.0,<0.15", 
    "click>=8.1.8,<9",
]
description = "Tools and resources for DNA sequence analysis with pretraining and finetuning."
name = "dnazen"
requires-python = "==3.13.1" # make it accurate to avoid dependency problems
version = "0.2.3"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "hatchling", 
    "setuptools>=42",
    "pybind11",
    "cmake",
]

[system-requirements]
cuda = ">=11.8"

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.dependencies]
pip = ">=24.3.1,<25"

[tool.pixi.feature.dev.dependencies]
make = "*"
gcc = ">=14.2.0,<14.3"

[dependency-groups]
dev = [
    "pybind11", "pybind11_stubgen", "pytest", 
    "ruff>=0.9.1,<0.10", "matplotlib", 
    "biopython>=1.84,<2", "pandas>=2.2.3,<3", 
    "pre-commit>=4.1.0,<5", "clang-format>=19.1.7,<20",
    "plotly==6.0"]
